--- a/src/components/categories/CategoryCard.css
+++ b/src/components/categories/CategoryCard.css
@@ -2,7 +2,7 @@
   width: 200px;
   height: 300px;
   overflow: hidden;
-  background-color: whitesmoke;
+  background-color: var(--white);
   box-shadow: 0px 0px 4px var(--brown);
   border-radius: 10px 10px;
   border: 1mm solid var(--brown);
