--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
 :root {
   --mint: #abc4aa;
   --lightbrown: #a9907e;
+  --white: #f4f4f4;
   --brown: #675d50;
   --peach: #f3deba;
+  --browninv: #675d5005;
+  --peachinv: #f3deba05;
   --mainfont: "Noto Sans", sans-serif;
   --headerfont: "Rubik Vinyl", cursive;
+  --gradientbody: linear-gradient(
+      72deg,
+      var(--peachinv) 33%,
+      transparent 0,
+      transparent 54%,
+      var(--peachinv) 0
+    ),
+    linear-gradient(
+      140deg,
+      transparent 50%,
+      var(--browninv) 0,
+      var(--browninv) 50%,
+      transparent 0
+    ),
+    linear-gradient(
+        30deg,
+        transparent 50%,
+        var(--peachinv) 0,
+        var(--peachinv) 63%,
+        transparent 0
+      )
+      #77552220;
 }
 
-body {
-  background-image: url("./images/background.jpg");
-  background-repeat: round;
-}
+/* .body {
+ background: var(--gradientbody);
+  background-size: 50px 50px;
+  padding-bottom: 1px;
+  position: absolute;
+} */
 
 .App {
   text-align: center;
   font-family: var(--mainfont);
 }
 
-.to-top-button {
-  color: var(--brown);
-  text-align: center;
-  background: var(--peach);
-  border: none;
-  font-size: 18px;
-  width: -moz-fit-content;
-  width: fit-content;
-  padding: 8px 24px;
-  border-radius: 10px;
-  box-shadow: 0px 0px 6px var(--brown);
-}
-
 #loading {
   margin-top: 100px;
-  margin-bottom: 25.6vh;;
+  margin-bottom: 25.6vh;
 }
 
 a:link {
