--- a/src/components/Homepage/ScrollToTop.css
+++ b/src/components/Homepage/ScrollToTop.css
@@ -15,7 +15,6 @@
   padding: 18px;
   transition: opacity 0.1s ease-in-out;
   border-radius: 10px 10px 0 0;
-  box-shadow: 0px 0px 1px var(--peach);
 }
 
 .scroll-button button:hover {
@@ -25,4 +24,17 @@
 }
 .scroll-button:hover {
   right: 11.7vw;
+}
+
+.to-top-button {
+  color: var(--brown);
+  text-align: center;
+  background: var(--peach);
+  border: none;
+  font-size: 18px;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 8px 24px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 6px var(--brown);
 }
