--- a/src/components/comments/NewComment.css
+++ b/src/components/comments/NewComment.css
@@ -5,7 +5,7 @@
   box-shadow: 0px 0px 4px var(--brown);
   border-radius: 10px;
   border: 1mm solid var(--brown);
-  background-color: whitesmoke;
+  background-color: var(--white);
   color: var(--brown);
   font-size: 16px;
 }
