--- a/src/components/Reviews/SingularReview.css
+++ b/src/components/Reviews/SingularReview.css
@@ -79,8 +79,7 @@
   background: var(--peach);
   border: none;
   font-size: 18px;
-  width: -moz-fit-content;
-  width: fit-content;
+  width: 100px;
   padding: 8px 24px;
   border-radius: 10px;
   box-shadow: 0px 0px 6px var(--brown);
