--- a/src/components/Homepage/Footer.css
+++ b/src/components/Homepage/Footer.css
@@ -2,35 +2,35 @@
   background-color: var(--brown);
   height: 60px;
   display: flex;
-  padding-left: 21%;
-  justify-content: flex-start;
-  flex-direction: row;
-  gap: 18px;
-  align-content: center;
+  /* padding-left: 21%; */
+  justify-content: space-between;
+  /* flex-direction: row; */
+  /* gap: 18px; */
+  /* align-content: center; */
   align-items: center;
   margin-top: 40px;
 }
 
 .text-footer {
   background-color: var(--brown);
-  color: var(--white);
-  padding: 0px 14px 0 0;
+  color: var(--peach);
+  padding: 0 0 0 21%;
 }
 
-.link-card {
+.links {
   position: relative;
-  width: 25px;
-  height: 25px;
+  display: flex;
+  gap: 20px;
+  padding-right: 20%;
 }
 
-.link-card img {
-  width: 100%;
+.links img {
+  width: 25px;
   object-fit: contain;
   transition: all 0.1s ease-in-out;
-  filter: invert(98%);
 }
 
 .link-card img:hover {
   transform: scale(1.3);
-  opacity: 0.5;
+  opacity: 0.7;
 }
