--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,5 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-    background: var(--gradientbody);
-    background-size: 50px 50px;
+    background-image: url("./images/backIMG.jpg")
 }
